Fix policy background - Make it invisible when user accepted already policies.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6505,3 +6505,8 @@ ul.actions.special {
   width: auto;
   margin-right: 15px;
 }
+
+html,
+body {
+  width: calc(100vw - (100vw - 100%));
+}
